--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -228,13 +228,16 @@
     <Compile Include="Models\ContactType.cs" />
     <Compile Include="Models\Country.cs" />
     <Compile Include="Models\Logo.cs" />
+    <Compile Include="Models\ManagmentViewModel\PartnerContactManagmentViewModel.cs" />
+    <Compile Include="Models\ManagmentViewModel\PartnerManagmentViewModel.cs" />
+    <Compile Include="Models\ManagmentViewModel\UserManagmentViewModel.cs" />
     <Compile Include="Models\Partner.cs" />
     <Compile Include="Models\PartnerContact.cs" />
     <Compile Include="Models\State.cs" />
     <Compile Include="Models\User.cs" />
-    <Compile Include="Models\ViewModels\PartnerContactViewModel.cs" />
-    <Compile Include="Models\ViewModels\PartnerViewModel.cs" />
-    <Compile Include="Models\ViewModels\UserViewModel.cs" />
+    <Compile Include="Models\DetailsViewModels\PartnerContactViewModel.cs" />
+    <Compile Include="Models\DetailsViewModels\PartnerViewModel.cs" />
+    <Compile Include="Models\DetailsViewModels\UserLoginViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\GenericRepository.cs" />
     <Compile Include="Repositories\IGenericRepository.cs" />
@@ -498,7 +501,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Helpers\CustomValidations\" />
-    <Folder Include="Models\DTOs\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
