--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -229,17 +229,20 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\City.cs" />
-    <Compile Include="Models\EntityConfigurations\PartnerContactConfiguration.cs" />
     <Compile Include="Models\ContactType.cs" />
     <Compile Include="Models\Country.cs" />
     <Compile Include="Models\Logo.cs" />
+    <Compile Include="Models\ManagmentViewModel\LogoManagmentViewModel.cs" />
+    <Compile Include="Models\ManagmentViewModel\PartnerContactManagmentViewModel.cs" />
+    <Compile Include="Models\ManagmentViewModel\PartnerManagmentViewModel.cs" />
+    <Compile Include="Models\ManagmentViewModel\UserManagmentViewModel.cs" />
     <Compile Include="Models\Partner.cs" />
     <Compile Include="Models\PartnerContact.cs" />
     <Compile Include="Models\State.cs" />
     <Compile Include="Models\User.cs" />
-    <Compile Include="Models\ViewModels\PartnerContactViewModel.cs" />
-    <Compile Include="Models\ViewModels\PartnerViewModel.cs" />
-    <Compile Include="Models\ViewModels\UserViewModel.cs" />
+    <Compile Include="Models\DetailsViewModels\PartnerContactViewModel.cs" />
+    <Compile Include="Models\DetailsViewModels\PartnerViewModel.cs" />
+    <Compile Include="Models\DetailsViewModels\UserLoginViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\GenericRepository.cs" />
     <Compile Include="Repositories\IGenericRepository.cs" />
@@ -386,6 +389,7 @@
     <Content Include="Content\assets\img\star-sky.jpg" />
     <Content Include="Content\assets\js\jquery.min.js" />
     <Content Include="Content\assets\js\script.min.js" />
+    <Content Include="Content\bootstrap-cosmo.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -496,13 +500,12 @@
     <Content Include="Views\Shared\Sections\SideBar.cshtml" />
     <Content Include="Views\Shared\_LayoutHome.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Dashboard\Index.cshtml" />
+    <Content Include="Views\Account\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Helpers\CustomValidations\" />
-    <Folder Include="Models\DTOs\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
