--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -252,18 +252,18 @@
     <Compile Include="Models\ContactType.cs" />
     <Compile Include="Models\Country.cs" />
     <Compile Include="Models\Logo.cs" />
-    <Compile Include="Models\CreateViewModel\LogoManagmentViewModel.cs" />
-    <Compile Include="Models\CreateViewModel\PartnerContactManagmentViewModel.cs" />
-    <Compile Include="Models\CreateViewModel\PartnerManagmentViewModel.cs" />
-    <Compile Include="Models\CreateViewModel\UserManagmentViewModel.cs" />
+    <Compile Include="Models\CreateViewModel\LogoCreateViewModel.cs" />
+    <Compile Include="Models\CreateViewModel\PartnerContactCreateViewModel.cs" />
+    <Compile Include="Models\CreateViewModel\PartnerCreateViewModel.cs" />
+    <Compile Include="Models\CreateViewModel\UserCreateViewModel.cs" />
     <Compile Include="Models\Partner.cs" />
     <Compile Include="Models\PartnerContact.cs" />
     <Compile Include="Models\Permission.cs" />
     <Compile Include="Models\SetOfPermission.cs" />
     <Compile Include="Models\State.cs" />
     <Compile Include="Models\User.cs" />
-    <Compile Include="Models\DetailsViewModels\PartnerContactViewModel.cs" />
-    <Compile Include="Models\DetailsViewModels\PartnerViewModel.cs" />
+    <Compile Include="Models\DetailsViewModels\PartnerContactDetailsViewModel.cs" />
+    <Compile Include="Models\DetailsViewModels\PartnerDetailsViewModel.cs" />
     <Compile Include="Models\DetailsViewModels\UserLoginViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\GenericRepository.cs" />
