add-migration to implement a change in user models

--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -246,6 +246,10 @@
     <Compile Include="Migrations\201708181648395_AddedSetOfPermissions.Designer.cs">
       <DependentUpon>201708181648395_AddedSetOfPermissions.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201708181939342_AddFieldUserModel.cs" />
+    <Compile Include="Migrations\201708181939342_AddFieldUserModel.Designer.cs">
+      <DependentUpon>201708181939342_AddFieldUserModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\City.cs" />
@@ -577,6 +581,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201708181648395_AddedSetOfPermissions.resx">
       <DependentUpon>201708181648395_AddedSetOfPermissions.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708181939342_AddFieldUserModel.resx">
+      <DependentUpon>201708181939342_AddFieldUserModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
