--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -255,6 +255,7 @@
     <Compile Include="Models\City.cs" />
     <Compile Include="Models\ContactType.cs" />
     <Compile Include="Models\Country.cs" />
+    <Compile Include="Models\IndexViewModel\PartnerContactIndexViewModel.cs" />
     <Compile Include="Models\Logo.cs" />
     <Compile Include="Models\CreateViewModel\LogoCreateViewModel.cs" />
     <Compile Include="Models\CreateViewModel\PartnerContactCreateViewModel.cs" />
@@ -272,14 +273,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\GenericRepository.cs" />
     <Compile Include="Repositories\IGenericRepository.cs" />
-    <Compile Include="Repositories\Logos\ILogoRepository.cs" />
-    <Compile Include="Repositories\Logos\LogoRepository.cs" />
-    <Compile Include="Repositories\PartnerContacts\IPartnerContactRepository.cs" />
-    <Compile Include="Repositories\PartnerContacts\PartnerContactRepository.cs" />
-    <Compile Include="Repositories\Partners\IPartnerRepository.cs" />
-    <Compile Include="Repositories\Partners\PartnerRepository.cs" />
-    <Compile Include="Repositories\Users\IUserRepository.cs" />
-    <Compile Include="Repositories\Users\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\adminsb\.gitignore" />
@@ -534,7 +527,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Helpers\CustomValidations\" />
-    <Folder Include="Models\IndexViewModel\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
