--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PartnersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -258,17 +259,48 @@
     <Compile Include="Migrations\201708190230422_Updated2.Designer.cs">
       <DependentUpon>201708190230422_Updated2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201708191620206_AddNewPartner.cs" />
+    <Compile Include="Migrations\201708191620206_AddNewPartner.Designer.cs">
+      <DependentUpon>201708191620206_AddNewPartner.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708191633395_UpdateulongToLong.cs" />
+    <Compile Include="Migrations\201708191633395_UpdateulongToLong.Designer.cs">
+      <DependentUpon>201708191633395_UpdateulongToLong.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708191639108_TestToCreateANewPartner.cs" />
+    <Compile Include="Migrations\201708191639108_TestToCreateANewPartner.Designer.cs">
+      <DependentUpon>201708191639108_TestToCreateANewPartner.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708191641022_CreateNewPartner.cs" />
+    <Compile Include="Migrations\201708191641022_CreateNewPartner.Designer.cs">
+      <DependentUpon>201708191641022_CreateNewPartner.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708191649073_UpdatePartnerId.cs" />
+    <Compile Include="Migrations\201708191649073_UpdatePartnerId.Designer.cs">
+      <DependentUpon>201708191649073_UpdatePartnerId.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708192125217_ChangeIsLocked.cs" />
+    <Compile Include="Migrations\201708192125217_ChangeIsLocked.Designer.cs">
+      <DependentUpon>201708192125217_ChangeIsLocked.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708210353405_UpdatingIAudit.cs" />
+    <Compile Include="Migrations\201708210353405_UpdatingIAudit.Designer.cs">
+      <DependentUpon>201708210353405_UpdatingIAudit.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\City.cs" />
     <Compile Include="Models\ContactType.cs" />
     <Compile Include="Models\Country.cs" />
-    <Compile Include="Models\IndexViewModel\PartnerContactIndexViewModel.cs" />
+    <Compile Include="Models\FormsViewModels\UserLoginViewModel.cs" />
+    <Compile Include="Models\InterfacesRepository\IAccountRepository.cs" />
+    <Compile Include="Models\InterfacesRepository\IGenericRepository.cs" />
+    <Compile Include="Models\InterfacesRepository\IPartnerRepository.cs" />
     <Compile Include="Models\Logo.cs" />
-    <Compile Include="Models\CreateViewModel\LogoCreateViewModel.cs" />
-    <Compile Include="Models\CreateViewModel\PartnerContactCreateViewModel.cs" />
-    <Compile Include="Models\CreateViewModel\PartnerCreateViewModel.cs" />
-    <Compile Include="Models\CreateViewModel\UserCreateViewModel.cs" />
+    <Compile Include="Models\FormsViewModels\LogoFormViewModel.cs" />
+    <Compile Include="Models\FormsViewModels\PartnerContactFormViewModel.cs" />
+    <Compile Include="Models\FormsViewModels\PartnerFormViewModel.cs" />
+    <Compile Include="Models\FormsViewModels\UserFormViewModel.cs" />
     <Compile Include="Models\Partner.cs" />
     <Compile Include="Models\PartnerContact.cs" />
     <Compile Include="Models\Permission.cs" />
@@ -277,10 +309,10 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\DetailsViewModels\PartnerContactDetailsViewModel.cs" />
     <Compile Include="Models\DetailsViewModels\PartnerDetailsViewModel.cs" />
-    <Compile Include="Models\DetailsViewModels\UserLoginViewModel.cs" />
+    <Compile Include="PersistanceRepository\AccountRepository.cs" />
+    <Compile Include="PersistanceRepository\GenericRepository.cs" />
+    <Compile Include="PersistanceRepository\PartnerRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\GenericRepository.cs" />
-    <Compile Include="Repositories\IGenericRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\adminsb\.gitignore" />
@@ -531,11 +563,13 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Dashboard\Index.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
+    <Content Include="Views\Partners\Index.cshtml" />
+    <Content Include="Views\Partners\Edit.cshtml" />
+    <Content Include="Views\Partners\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Helpers\CustomValidations\" />
-    <Folder Include="Views\PartnerContacts\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -591,6 +625,27 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201708190230422_Updated2.resx">
       <DependentUpon>201708190230422_Updated2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708191620206_AddNewPartner.resx">
+      <DependentUpon>201708191620206_AddNewPartner.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708191633395_UpdateulongToLong.resx">
+      <DependentUpon>201708191633395_UpdateulongToLong.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708191639108_TestToCreateANewPartner.resx">
+      <DependentUpon>201708191639108_TestToCreateANewPartner.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708191641022_CreateNewPartner.resx">
+      <DependentUpon>201708191641022_CreateNewPartner.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708191649073_UpdatePartnerId.resx">
+      <DependentUpon>201708191649073_UpdatePartnerId.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708192125217_ChangeIsLocked.resx">
+      <DependentUpon>201708192125217_ChangeIsLocked.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708210353405_UpdatingIAudit.resx">
+      <DependentUpon>201708210353405_UpdatingIAudit.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
